[package]
name = "image-effects"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = ["console"] }
base64 = "0.13.0"
image = "0.23.14"
chrono = { version = "0.4", features = ["wasmbind"] }
